Fix API spec
