# backend/src/main/java/com/fptgang/backend/controller/ContractController.java
@@ -2,24 +2,15 @@ package com.fptgang.backend.controller;
 
 import com.fptgang.backend.api.controller.ContractsApi;
 import com.fptgang.backend.api.model.ContractDto;
-import com.fptgang.backend.api.model.GetContracts200Response;
-import com.fptgang.backend.api.model.Pageable;
 import com.fptgang.backend.mapper.ContractMapper;
 import com.fptgang.backend.mapper.DetailLevel;
-import com.fptgang.backend.model.Contract;
-import com.fptgang.backend.model.Role;
 import com.fptgang.backend.service.ContractService;
-import com.fptgang.backend.service.params.ListParams;
-import com.fptgang.backend.util.OpenApiHelper;
-import com.fptgang.backend.util.SecurityUtil;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.Objects;
 
 @RestController
 @RequestMapping("/api/v1")
@@ -35,48 +26,7 @@ public class ContractController implements ContractsApi {
     }
 
     @Override
-    public ResponseEntity<ContractDto> createContract(ContractDto contractDto) {
-        var contract = contractMapper.toEntity(contractDto);
-        return new ResponseEntity<>(contractMapper.toDTO(contractService.create(contract), DetailLevel.FULL), HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<ContractDto> getContractById(Long contractId) {
-        Contract contract = contractService.findById(contractId);
-        DetailLevel detailLevel = DetailLevel.REFERENCE;
-        if (SecurityUtil.hasPermission(Role.ADMIN) ||
-                SecurityUtil.hasPermission(Role.STAFF) ||
-                Objects.equals(SecurityUtil.getCurrentUserId(), contract.getProject().getClient().getAccountId()) ||
-                Objects.equals(SecurityUtil.getCurrentUserId(), contract.getFreelancer().getAccountId())) {
-
-            detailLevel = DetailLevel.FULL;
-        }
-        return new ResponseEntity<>(contractMapper.toDTO(contract, detailLevel), HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<GetContracts200Response> getContracts(Pageable pageable, String filter, String search) {
-
-        var includeInvisible = SecurityUtil.hasPermission(Role.ADMIN);
-        var params = ListParams.builder()
-                .pageable(OpenApiHelper.toPageable(pageable))
-                .search(search)
-                .filter(filter)
-                .includeInvisible(includeInvisible);
-        var res = contractService
-                .getAll(params.build())
-                .map(contract -> contractMapper.toDTO(contract, DetailLevel.REFERENCE));
-        return OpenApiHelper.respondPage(res, GetContracts200Response.class);
-    }
-
-    @Override
-    public ResponseEntity<ContractDto> signInContract(Long contractId) {
+    public ResponseEntity<ContractDto> signContract(Long contractId) {
         return new ResponseEntity<>(contractMapper.toDTO(contractService.signContract(contractId), DetailLevel.FULL), HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Void> terminateContract(Long contractId) {
-        contractService.terminateContract(contractId);
-        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
